--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
 <main>
 
 <h2>Contact Information</h2>
-<p>Phone Number: +91 9909993525</p>
-<p>Email ID: dwivedikrish58@gmail.com</p>
-<p>Address: Charotar Patel Society, Maninagar, Ahmedabad, Gujarat</p>
+<p>Phone Number: +91 9315764050</p>
+<p>Email ID: adagupta064@gmail.com</p>
+<p>Address: Navratan Residency, Meghpur, Kutch, Gujarat</p>
 
 <div class="text-center mt-4">
-    <a href="https://www.linkedin.com/in/krish-dwivedi-287879235/" target="_blank" class="btn btn-primary">
+    <a href="https://www.linkedin.com/in/ada-gupta-06252428a/" target="_blank" class="btn btn-primary">
         Visit My LinkedIn
     </a>
 </div>
@@ -56,7 +56,7 @@
 
 
 <footer class="bg-dark text-white text-center p-3">
-    &copy; 2025 My Website | All Rights Reserved
+    &copy; 2025 My Website 
 </footer>
 
 <script src="js/script.js"></script>
