--- a/marks.html
+++ b/marks.html
@@ -102,15 +102,15 @@
             </tr>
             <tr>
                 <th>Name</th>
-                <td>Krish Dwivedi</td>
+                <td>Ada Gupta</td>
                 <th>Father's / Mother's Name</th>
-                <td>Poonam Dwivedi</td>
+                <td>Neha Gupta</td>
             </tr>
             <tr>
                 <th>Department / College</th>
                 <td>07-USCI</td>
                 <th>Enrolment No.</th>
-                <td>202307010021</td>
+                <td>202307030001</td>
             </tr>
         </table>
         <table class="grades">
@@ -132,10 +132,10 @@
                 <td>23BSAE21 - Professional Communication and Behaviour-II</td>
                 <td>4</td>
                 <td>50</td>
-                <td>47</td>
+                <td>43</td>
                 <td>50</td>
                 <td>30</td>
-                <td>77</td>
+                <td>91</td>
                 <td>O</td>
             </tr>
             <tr>
@@ -152,7 +152,7 @@
                 <td>23BSPC21 - Constitution of India</td>
                 <td>4</td>
                 <td>50</td>
-                <td>40</td>
+                <td>47</td>
                 <td>50</td>
                 <td>20</td>
                 <td>60</td>
@@ -162,7 +162,7 @@
                 <td>23BSPC22 - Computer Organization and Architecture</td>
                 <td>4</td>
                 <td>50</td>
-                <td>40</td>
+                <td>49</td>
                 <td>50</td>
                 <td>40</td>
                 <td>80</td>
